--- a/themes.html
+++ b/themes.html
@@ -166,14 +166,14 @@
             <div class="inner">
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Themes</h1>
-                <div id="plugin-list-count" class="total-items">Total Themes: 61</div>
+                <div id="plugin-list-count" class="total-items">Total Themes: 64</div>
                 <input type="search" id="plugin-search-input" placeholder="Search themes...">
               </header>
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                   <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                 </h1>
-                <div id="plugin-list-count">51 Themes</div>
+                <div id="plugin-list-count">54 Themes</div>
                 <hr>
               </header>
               <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -523,7 +523,7 @@
                   <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
                 </li>
                 <li class="plugin on">
-                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/IhUpZYc.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="/themes/kancolle-shiratsuyu-class" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/IhUpZYc.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="/themes/kancolle-shiratsuyu-class.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
                   <a href="/themes/kancolle-shiratsuyu-class.html" class="plugin-name">Kancolle Shiratsuyu Class</a>
                   <p class="plugin-desc">Bright theme with harusame, yuudachi, shiratsuyu, shigure and murasame</p>
                   <div class="plugin-tag-list"> 
@@ -532,6 +532,41 @@
                   <a href="#Red" class="plugin-tag">Red</a>
                   <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a>
                   <a href="#Light" class="plugin-tag tag-invis">Light</a> 
+                  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                </li>
+                <li class="plugin on">
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/aFAU2Zd.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="/themes/notanotheranimetheme.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="/themes/notanotheranimetheme.html" class="plugin-name">NotAnotherAnimeTheme</a>
+                  <p class="plugin-desc">A minimalist anime theme for Discord</p>
+                  <div class="plugin-tag-list"> 
+                  <a href="#WhatDaPuck" class="plugin-tag">WhatDaPuck</a>
+                  <a href="#Anime" class="plugin-tag">Anime</a>
+                  <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a>
+                  <a href="#Dark" class="plugin-tag tag-invis">Dark</a> 
+                  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                </li>
+                <li class="plugin on">
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/SQFLhqU.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="/themes/neon-space.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="/themes/neon-space.html" class="plugin-name">Neon Space</a>
+                  <p class="plugin-desc">Amazing theme if you love space and dark colors.</p>
+                  <div class="plugin-tag-list"> 
+                  <a href="#CAtOSe" class="plugin-tag">CAtOSe</a>
+                  <a href="#Neon" class="plugin-tag">Neon</a>
+                  <a href="#Space" class="plugin-tag">Space</a>
+                  <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a>
+                  <a href="#Dark" class="plugin-tag tag-invis">Dark</a> 
+                  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                </li>
+                <li class="plugin on">
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/cSAdWHg.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="/themes/darker-discord.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="/themes/darker-discord.html" class="plugin-name">Darker Discord</a>
+                  <p class="plugin-desc">A darker more softer and modern look of discord.</p>
+                  <div class="plugin-tag-list"> 
+                  <a href="#Sweds" class="plugin-tag">Sweds</a>
+                  <a href="#Darker" class="plugin-tag">Darker</a>
+                  <a href="#Flat" class="plugin-tag">Flat</a>
+                  <a href="#Transparent" class="plugin-tag tag-invis">Transparent</a>
+                  <a href="#Dark" class="plugin-tag tag-invis">Dark</a> 
                   <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
                 </li>
               </ul>
