--- a/plugins.html
+++ b/plugins.html
@@ -153,14 +153,14 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 86</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 88</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">85 Plugins</div>
+                <div id="plugin-list-count">88 Plugins</div>
                 <hr>
               </header>
                  
@@ -612,6 +612,34 @@
                       <a href="#Clear" class="plugin-tag">Clear</a> 
                       <a href="#Erase" class="plugin-tag">Erase</a>
                       <a href="#Chat" class="plugin-tag">Chat</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/PokeTehDoge/Replacer-Plugin/blob/master/Replacer.plugin.js" class="plugin-name" target="_blank">Replacer</a>
+                      <p class="plugin-desc">Replaces Text with What you Enter.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#SpectralDoge" class="plugin-tag">SpectralDoge</a> 
+                      <a href="#Replace" class="plugin-tag">Replaces</a> 
+                      <a href="#Overwrite" class="plugin-tag">Overwrite</a>
+                      <a href="#Chat" class="plugin-tag">Chat</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/KennethWussmann/QuickReact" class="plugin-name" target="_blank">QuickReact</a>
+                      <p class="plugin-desc">QuickReact opens the reaction emoji picker of the last sent message in the current channel when you press SHIFT + UP. So you can react to the message without using the mouse or removing your current message in the messagebox.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#ketrwu" class="plugin-tag">ketrwu</a> 
+                      <a href="#Quick" class="plugin-tag">Quick</a> 
+                      <a href="#Fast" class="plugin-tag">Fast</a>
+                      <a href="#Shortcut" class="plugin-tag">Shortcut</a>
+                      <a href="#Reaction" class="plugin-tag">Reaction</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/WastedWizard42/BDtoggleChannelsServers" class="plugin-name" target="_blank">ToggleGuildsChannels</a>
+                      <p class="plugin-desc">Adds a button on the top bar of discord that cycles through Channels and Servers tabs being displayed. One click removes channels, second removes both, third toggles channels back on and 4th click returns to default state.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#WastedWizard" class="plugin-tag">WastedWizard</a> 
+                      <a href="#Shortcut" class="plugin-tag">Shortcut</a>
+                      <a href="#Toggle" class="plugin-tag">Toggle</a>
+                      <a href="#Shortcut" class="plugin-tag">Shortcut</a>
                       </div>
                     </li>
               </ul>
