--- a/themes.html
+++ b/themes.html
@@ -166,14 +166,14 @@
             <div class="inner">
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Themes</h1>
-                <div id="plugin-list-count" class="total-items">Total Themes: 65</div>
+                <div id="plugin-list-count" class="total-items">Total Themes: 66</div>
                 <input type="search" id="plugin-search-input" placeholder="Search themes...">
               </header>
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                   <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                 </h1>
-                <div id="plugin-list-count">55 Themes</div>
+                <div id="plugin-list-count">56 Themes</div>
                 <hr>
               </header>
               <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -578,6 +578,19 @@
                   <a href="#Blue" class="plugin-tag">Blue</a>
                   <a href="#Flat" class="plugin-tag">Flat</a>
                   <a href="#Modern" class="plugin-tag">Modern</a>
+                  <a href="#Solid" class="plugin-tag tag-invis">Solid</a>
+                  <a href="#Dark" class="plugin-tag tag-invis">Dark</a> 
+                  <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                </li>
+                <li class="plugin on">
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/xaqz1H4.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="/themes/cherry-red.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="/themes/cherry-red.html" class="plugin-name">Cherry Red</a>
+                  <p class="plugin-desc">A Chill Relaxed Grey And Red Based Theme</p>
+                  <div class="plugin-tag-list"> 
+                  <a href="#STLN" class="plugin-tag">STLN</a>
+                  <a href="#Red" class="plugin-tag">Red</a>
+                  <a href="#Flat" class="plugin-tag">Flat</a>
+                  <a href="#Relaxed" class="plugin-tag">Relaxed</a>
                   <a href="#Solid" class="plugin-tag tag-invis">Solid</a>
                   <a href="#Dark" class="plugin-tag tag-invis">Dark</a> 
                   <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
