--- a/plugins.html
+++ b/plugins.html
@@ -153,14 +153,14 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 88</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 93</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">88 Plugins</div>
+                <div id="plugin-list-count">93 Plugins</div>
                 <hr>
               </header>
                  
@@ -630,7 +630,7 @@
                       <a href="#Quick" class="plugin-tag">Quick</a> 
                       <a href="#Fast" class="plugin-tag">Fast</a>
                       <a href="#Shortcut" class="plugin-tag">Shortcut</a>
-                      <a href="#Reaction" class="plugin-tag">Reaction</a>
+                      <a href="#Hotkeys" class="plugin-tag">Hotkeys</a>
                       </div>
                     </li>
                     <li class="plugin on"> <a href="https://github.com/WastedWizard42/BDtoggleChannelsServers" class="plugin-name" target="_blank">ToggleGuildsChannels</a>
@@ -639,7 +639,52 @@
                       <a href="#WastedWizard" class="plugin-tag">WastedWizard</a> 
                       <a href="#Shortcut" class="plugin-tag">Shortcut</a>
                       <a href="#Toggle" class="plugin-tag">Toggle</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://gist.github.com/PointyDev/5b01776baa5d66d55fd9c05ab1c575a8" class="plugin-name" target="_blank">DiscordExperiments</a>
+                      <p class="plugin-desc">Enables the experiments tab on the Discord client. May require closing and reopening user settings to take effect. Open settings panel for more information.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Pointy" class="plugin-tag">Pointy</a> 
+                      <a href="#Experiments" class="plugin-tag">Experiments</a>
+                      <a href="#Developer" class="plugin-tag">Developer</a>
+                      <a href="#Secret" class="plugin-tag">Secret</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/BetterFormattingRedux" class="plugin-name" target="_blank">BetterFormattingRedux</a>
+                      <p class="plugin-desc">Lets you format your messages with buttons and adds more formatting options.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a> 
                       <a href="#Shortcut" class="plugin-tag">Shortcut</a>
+                      <a href="#Formatting" class="plugin-tag">Formatting</a>
+                      <a href="#Messages" class="plugin-tag">Messages</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/toggleYourStuff.plugin.js" class="plugin-name" target="_blank">toggleYourStuff</a>
+                      <p class="plugin-desc">Toggle your plugins and themes using hotkeys.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#square" class="plugin-tag">square</a> 
+                      <a href="#Shortcut" class="plugin-tag">Shortcut</a>
+                      <a href="#Hotkey" class="plugin-tag">Hotkey</a>
+                      <a href="#Toggle" class="plugin-tag">Toggle</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/minimizeShortcut.plugin.js" class="plugin-name" target="_blank">minimizeShortcut</a>
+                      <p class="plugin-desc">Provides you with a shortcut to show/hide/minimize discord. Edit the file to configure the plugin.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#square" class="plugin-tag">square</a> 
+                      <a href="#Shortcut" class="plugin-tag">Shortcut</a>
+                      <a href="#Hide" class="plugin-tag">Hide</a>
+                      <a href="#Show" class="plugin-tag">Show</a>
+                      <a href="#Minimize" class="plugin-tag">Minimize</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/shake4ever.plugin.js" class="plugin-name" target="_blank">shake4ever</a>
+                      <p class="plugin-desc">You have to make your discord shake once before enabling this or it won't work. Do that by hitting Ctrl+Shift+Alt+DownArrow outside of the menu. React interface by noodlebox.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#square" class="plugin-tag">square</a> 
+                      <a href="#Hotkey" class="plugin-tag">Hotkey</a>
+                      <a href="#Shake" class="plugin-tag">Shake</a>
+                      <a href="#Forever" class="plugin-tag">Forever</a>
                       </div>
                     </li>
               </ul>
