--- a/plugins.html
+++ b/plugins.html
@@ -360,6 +360,7 @@
                       <p class="plugin-desc">Switch channels quickly via the keyboard. Just press ctrl+k</p>
                       <div class="plugin-tag-list"> <a href="#Ciaran" class="plugin-tag">Ciaran</a> <a href="#Switcher" class="plugin-tag">Switcher</a> <a href="#Channel" class="plugin-tag">Channel</a> </div>
                     </li>
+                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <li class="plugin on"> <a href="https://github.com/iVEnoVaLue/BetterPlugins/blob/master/plugins/avatar.plugin.js" class="plugin-name" target="_blank">Avatar hover</a>
                       <p class="plugin-desc">When hovering, show a resized version of the avatar. Use Ctrl / Ctrl+Shift </p>
                       <div class="plugin-tag-list"> <a href="#noVaLue" class="plugin-tag">noVaLue</a> <a href="#Avatar" class="plugin-tag">Avatar</a> <a href="#Hover" class="plugin-tag">Hover</a> </div>
