--- a/installation.html
+++ b/installation.html
@@ -15,7 +15,7 @@
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://betterdocs.net/"/>
 <meta property="og:site_name" content="Omni"/>
-<meta property="og:title" content="BetterDiscord Docs"/>
+<meta property="og:title" content="BetterDocs"/>
 <meta property="og:description" content="Free quality Themes and Plugins for Discord and easy installation instructions to install BetterDiscord and/or BeautifulDiscord!"/>
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png"/>
 
