--- a/plugins.html
+++ b/plugins.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://betterdocs.net/" />
     <meta property="og:site_name" content="Omni" />
-    <meta property="og:title" content="BetterDiscord Docs" />
+    <meta property="og:title" content="Discord Plugins" />
     <meta property="og:description" content="List of free high quality Discord plugins by our community! Modify your Discord to your own liking with advanced plugins!" />
     <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 
