added server sorter plugin

--- a/plugins.html
+++ b/plugins.html
@@ -153,14 +153,14 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 93</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 94</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">93 Plugins</div>
+                <div id="plugin-list-count">94 Plugins</div>
                 <hr>
               </header>
                  
@@ -686,6 +686,15 @@
                       <a href="#Hotkey" class="plugin-tag">Hotkey</a>
                       <a href="#Shake" class="plugin-tag">Shake</a>
                       <a href="#Forever" class="plugin-tag">Forever</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/ServerSorter" class="plugin-name" target="_blank">ServerSorter</a>
+                      <p class="plugin-desc">Adds the ability to do some basic sorting of your servers.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a> 
+                      <a href="#Server" class="plugin-tag">Server</a>
+                      <a href="#Guild" class="plugin-tag">Guild</a>
+                      <a href="#Sorter" class="plugin-tag">Sorter</a>
                       </div>
                     </li>
               </ul>
