--- a/plugins.html
+++ b/plugins.html
@@ -153,14 +153,24 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 94</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 92</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
+                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">93 Plugins</div>
+                <div id="plugin-list-count">92 Plugins</div>
                 <hr>
               </header>
                  
@@ -232,13 +242,21 @@
                       <p class="plugin-desc">Adds a button to the right-click menu to hide images on certain channels and servers.</p>
                       <div class="plugin-tag-list"> <a href="#Anxeal -" class="plugin-tag">Anxeal</a> <a href="#Hide" class="plugin-tag">Hide</a> <a href="#Channels" class="plugin-tag">Channels</a> </div>
                     </li>
-                <li class="plugin on"> <a href="https://github.com/Anxeal/BDEnhancements/tree/master/plugins/ColoredTyping" class="plugin-name" target="_blank">Colored Typing</a>
+                <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/blob/master/Plugins/ColoredStuff/ColoredTyping.plugin.js" class="plugin-name" target="_blank">Colored Typing</a>
                       <p class="plugin-desc">Make the text color of the "typing..." text same as role color.</p>
-                      <div class="plugin-tag-list"> <a href="#Anxeal -" class="plugin-tag">Anxeal</a> <a href="#Bolli" class="plugin-tag">Bolli</a> <a href="#Color" class="plugin-tag">Color</a> <a href="#Typing" class="plugin-tag">Typing</a> <a href="#Role" class="plugin-tag">Role</a> </div>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a> 
+                      <a href="#Color" class="plugin-tag">Color</a> 
+                      <a href="#Typing" class="plugin-tag">Typing</a> 
+                      <a href="#Role" class="plugin-tag">Role</a> </div>
                     </li>
-                <li class="plugin on"> <a href="https://github.com/Anxeal/BDEnhancements/tree/master/plugins/ColoredVoice" class="plugin-name" target="_blank">Colored Voice</a>
+                <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/blob/master/Plugins/ColoredStuff/ColoredVoice.plugin.js" class="plugin-name" target="_blank">Colored Voice</a>
                       <p class="plugin-desc">Make the text color of the names in the voice channel same as role color.</p>
-                      <div class="plugin-tag-list"> <a href="#Anxeal" class="plugin-tag">Anxeal</a> <a href="#Color" class="plugin-tag">Color</a> <a href="#Typing" class="plugin-tag">Voice</a> <a href="#Role" class="plugin-tag">Role</a> </div>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a> 
+                      <a href="#Color" class="plugin-tag">Color</a> 
+                      <a href="#Typing" class="plugin-tag">Voice</a> 
+                      <a href="#Role" class="plugin-tag">Role</a> </div>
                     </li>
                 <li class="plugin on"> <a href="https://github.com/Natsulus/BD-Repo/blob/master/plugins/Creation%20Date/CreationDate.plugin.js" class="plugin-name" target="_blank">Creation Date</a>
                       <p class="plugin-desc">See when a user's account was created.</p>
@@ -263,10 +281,6 @@
                 <li class="plugin on"> <a href="https://github.com/kosshishub/Quicksave-BD-plugin/" class="plugin-name" target="_blank">Quick Save</a>
                       <p class="plugin-desc">Lets you save images fast with a short random name (Or the original if you want to)</p>
                       <div class="plugin-tag-list"> <a href="#Kosshi" class="plugin-tag">Kosshi</a> <a href="#Save" class="plugin-tag">Save</a> <a href="#Image" class="plugin-tag">Image</a> </div>
-                    </li>
-                <li class="plugin on"> <a href="https://github.com/Anxeal/BDEnhancements/tree/master/plugins/BetterFormatting" class="plugin-name" target="_blank">BetterFormatting</a>
-                      <p class="plugin-desc">Let's you format your messages with buttons and adds more formatting options</p>
-                      <div class="plugin-tag-list"> <a href="#Anxeal" class="plugin-tag">Anxeal</a> <a href="#Format" class="plugin-tag">Format</a> <a href="#Style" class="plugin-tag">Style</a> </div>
                     </li>
                 <li class="plugin on"> <a href="https://github.com/Finicalmist/ChangingBackground/blob/master/changingBackground.plugin.js" class="plugin-name" target="_blank">Changing Background</a>
                       <p class="plugin-desc">Changes the Background Image from Themes automatically</p>
@@ -515,7 +529,7 @@
                       <a href="#Server" class="plugin-tag">Server</a>
                       </div>
                     </li>
-                    <li class="plugin on"> <a href="https://gist.githubusercontent.com/Jiiks/be75742507ccf1587e8fd85851bdb26f/raw/3763ee411084c70fe137a0f5b2ee455db2450e0d/charCounter.plugin.js" class="plugin-name" target="_blank">Character Counter</a>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/charCounter.plugin.js" class="plugin-name" target="_blank">Character Counter</a>
                       <p class="plugin-desc">Adds character counter to channel textarea</p>
                       <div class="plugin-tag-list"> 
                       <a href="#Jiiks" class="plugin-tag">Jiiks</a> 
