--- a/themes.html
+++ b/themes.html
@@ -169,6 +169,16 @@
                 <div id="plugin-list-count" class="total-items">Total Themes: 66</div>
                 <input type="search" id="plugin-search-input" placeholder="Search themes...">
               </header>
+              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                   <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
