Add working Silent Typing plugin

--- a/plugins.html
+++ b/plugins.html
@@ -707,6 +707,14 @@
                       <a href="#Sorter" class="plugin-tag">Sorter</a>
                       </div>
                     </li>
+                    <li class="plugin on"> <a href="https://github.com/noodlebox/betterdiscord-plugins/blob/master/SilentTyping.plugin.js" class="plugin-name" target="_blank">Silent Typing</a>
+                      <p class="plugin-desc">Don't send typing notifications.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#noodlebox" class="plugin-tag">noodlebox</a>
+                      <a href="#Typing" class="plugin-tag">Typing</a>
+                      <a href="#Privacy" class="plugin-tag">Privacy</a>
+                      </div>
+                    </li>
               </ul>
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header beauty-header">
