--- a/plugins.html
+++ b/plugins.html
@@ -153,7 +153,7 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 93</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 97</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -170,7 +170,7 @@
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">93 Plugins</div>
+                <div id="plugin-list-count">97 Plugins</div>
                 <hr>
               </header>
                  
@@ -713,6 +713,39 @@
                       <a href="#noodlebox" class="plugin-tag">noodlebox</a>
                       <a href="#Typing" class="plugin-tag">Typing</a>
                       <a href="#Privacy" class="plugin-tag">Privacy</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/BetterRoleColors" class="plugin-name" target="_blank">Better Role Colors</a>
+                      <p class="plugin-desc">Adds server-based role colors to typing, voice, popouts, modals and more!</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a>
+                      <a href="#Role" class="plugin-tag">Role</a>
+                      <a href="#Colors" class="plugin-tag">Colors</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/StatusEverywhere" class="plugin-name" target="_blank">Status Everywhere</a>
+                      <p class="plugin-desc">Adds user status everywhere Discord doesn't.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a>
+                      <a href="#Status" class="plugin-tag">Status</a>
+                      <a href="#User" class="plugin-tag">User</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/AlwaysTyping" class="plugin-name" target="_blank">Always Typing</a>
+                      <p class="plugin-desc">Makes people think you're always typing, even when you're not.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a>
+                      <a href="#Typing" class="plugin-tag">Typing</a>
+                      <a href="#Trolling" class="plugin-tag">Trolling</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/directDownload.plugin.js" class="plugin-name" target="_blank">Direct Download</a>
+                      <p class="plugin-desc">Download attached files directly within discord.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Square" class="plugin-tag">Square</a>
+                      <a href="#Download" class="plugin-tag">Download</a>
+                      <a href="#Direct" class="plugin-tag">Direct</a>
+                      <a href="#Save" class="plugin-tag">Save</a>
                       </div>
                     </li>
               </ul>
