SendEmbeds plugin link update

--- a/plugins.html
+++ b/plugins.html
@@ -493,7 +493,7 @@
                       <a href="#Channel" class="plugin-tag">Channel</a>  
                       </div>
                     </li>
-                    <li class="plugin on"> <a href="https://gist.github.com/HansAnonymous/7ab7b1363b7d3587af9a183f8bb2e156" class="plugin-name" target="_blank">SendEmbeds</a>
+                    <li class="plugin on"> <a href="https://github.com/HansAnonymous/BD-Themes-and-Plugins/tree/master/Plugins/SendEmbeds" class="plugin-name" target="_blank">SendEmbeds</a>
                       <p class="plugin-desc">Send Embeds with /e. Open my settings to see full description.</p>
                       <div class="plugin-tag-list"> 
                       <a href="#HansAnonymous" class="plugin-tag">HansAnonymous</a> 
