--- a/plugins.html
+++ b/plugins.html
@@ -153,7 +153,7 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 97</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 99</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -170,7 +170,7 @@
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">97 Plugins</div>
+                <div id="plugin-list-count">99 Plugins</div>
                 <hr>
               </header>
                  
@@ -746,6 +746,26 @@
                       <a href="#Download" class="plugin-tag">Download</a>
                       <a href="#Direct" class="plugin-tag">Direct</a>
                       <a href="#Save" class="plugin-tag">Save</a>
+                      </div>
+                    </li>
+		     <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/ResizableCSS" class="plugin-name" target="_blank">ResizableCSS</a>
+                      <p class="plugin-desc">Allows you to resize the detached CustomCSS window. Useful for development and customization.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a>
+                      <a href="#Developer" class="plugin-tag">Developer</a>
+                      <a href="#Development" class="plugin-tag">Development</a>
+                      <a href="#Theme" class="plugin-tag">Theme</a>
+		      <a href="#CSS" class="plugin-tag">CSS</a>
+                      </div>
+                    </li>
+		    <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/BlurNSFW" class="plugin-name" target="_blank">BlurNSFW</a>
+                      <p class="plugin-desc">Blurs images in NSFW channels until you hover over it.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a>
+                      <a href="#NSFW" class="plugin-tag">NSFW</a>
+                      <a href="#Safe" class="plugin-tag">Safe</a>
+                      <a href="#Blur" class="plugin-tag">Blur</a>
+		      <a href="#Hide" class="plugin-tag">Hide</a>
                       </div>
                     </li>
               </ul>
