--- a/plugins.html
+++ b/plugins.html
@@ -153,7 +153,7 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 97</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 99</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -170,7 +170,7 @@
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">97 Plugins</div>
+                <div id="plugin-list-count">99 Plugins</div>
                 <hr>
               </header>
                  
@@ -652,11 +652,11 @@
                       <a href="#Toggle" class="plugin-tag">Toggle</a>
                       </div>
                     </li>
-                    <li class="plugin on"> <a href="https://gist.github.com/PointyDev/5b01776baa5d66d55fd9c05ab1c575a8" class="plugin-name" target="_blank">DiscordExperiments</a>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/discordexperiments.plugin.js" class="plugin-name" target="_blank">DiscordExperiments</a>
                       <p class="plugin-desc">Enables the experiments tab on the Discord client. May require closing and reopening user settings to take effect. Open settings panel for more information.</p>
                       <div class="plugin-tag-list"> 
-                      <a href="#Pointy" class="plugin-tag">Pointy</a> 
-                      <a href="#Experiments" class="plugin-tag">Experiments</a>
+                      <a href="#Pointy" class="plugin-tag">Square</a> 
+                      <a href="#Square" class="plugin-tag">Experiments</a>
                       <a href="#Developer" class="plugin-tag">Developer</a>
                       <a href="#Secret" class="plugin-tag">Secret</a>
                       </div>
@@ -746,6 +746,35 @@
                       <a href="#Download" class="plugin-tag">Download</a>
                       <a href="#Direct" class="plugin-tag">Direct</a>
                       <a href="#Save" class="plugin-tag">Save</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/ImageToClipboard" class="plugin-name" target="_blank">ImageToClipboard</a>
+                      <p class="plugin-desc">Allows you to copy images (png/jpg) directly to your system clipboard.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a>
+                      <a href="#Copy" class="plugin-tag">Copy</a>
+                      <a href="#Paste" class="plugin-tag">Paste</a>
+                      <a href="#Images" class="plugin-tag">Images</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/rauenzi/BetterDiscordAddons/tree/master/Plugins/ImageToClipboard" class="plugin-name" target="_blank">ImageToClipboard</a>
+                      <p class="plugin-desc">Allows you to copy images (png/jpg) directly to your system clipboard.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Zerebos" class="plugin-tag">Zerebos</a>
+                      <a href="#Copy" class="plugin-tag">Copy</a>
+                      <a href="#Paste" class="plugin-tag">Paste</a>
+                      <a href="#Images" class="plugin-tag">Images</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/enableReactDevtools.plugin.js" class="plugin-name" target="_blank">Enable React-Devtools</a>
+                      <p class="plugin-desc">Automatically loads the React Devtools for you.
+Requires React-Devtools being installed in your chrome browser:
+  https://chrome.google.com/webstore/detail/react-developer-tools/fmkadmapgofadopljbjfkapdkoienihi</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Zerebos" class="plugin-tag">Square</a>
+                      <a href="#Developer" class="plugin-tag">Developer</a>
+                      <a href="#React" class="plugin-tag">React</a>
+                      <a href="#Tools" class="plugin-tag">Tools</a>
                       </div>
                     </li>
               </ul>
