--- a/themes.html
+++ b/themes.html
@@ -166,7 +166,7 @@
             <div class="inner">
               <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Themes</h1>
-                <div id="plugin-list-count" class="total-items">Total Themes: 66</div>
+                <div id="plugin-list-count" class="total-items">Total Themes: 67</div>
                 <input type="search" id="plugin-search-input" placeholder="Search themes...">
               </header>
               <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -183,7 +183,7 @@
                 <h1 id="plugin-list-title" class="bd-header">
                   <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                 </h1>
-                <div id="plugin-list-count">56 Themes</div>
+                <div id="plugin-list-count">57 Themes</div>
                 <hr>
               </header>
               <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -226,6 +226,12 @@
                   <a href="https://betterdocs.net/themes/quiet.html" class="plugin-name">Quiet</a>
                   <p class="plugin-desc">Dark and Quiet. Easy on the eyes.</p>
                   <div class="plugin-tag-list"> <a href="#Omniscient" class="plugin-tag">Omniscient</a> <a href="#Flat" class="plugin-tag">Flat</a> <a href="#Dark" class="plugin-tag tag-invis">Dark</a> <a href="#Modern" class="plugin-tag tag-invis">Modern</a> <a href="#Material" class="plugin-tag tag-invis">Material</a> <a href="#Animations" class="plugin-tag tag-invis">Animations</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
+                </li>
+		<li class="plugin on">
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/ylj9Yfq.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/quiet.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="https://betterdocs.net/themes/quiet.html" class="plugin-name">Loud</a>
+                  <p class="plugin-desc">Light and Loud. Easy on the eyes.</p>
+                  <div class="plugin-tag-list"> <a href="#Omniscient" class="plugin-tag">Omniscient</a> <a href="#Flat" class="plugin-tag">Flat</a> <a href="#Light" class="plugin-tag tag-invis">Light</a> <a href="#Modern" class="plugin-tag tag-invis">Modern</a> <a href="#Material" class="plugin-tag tag-invis">Material</a> <a href="#Animations" class="plugin-tag tag-invis">Animations</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
                 </li>
                 <li class="plugin on">
                   <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/mP4VNJN.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/nova.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
