--- a/themes.html
+++ b/themes.html
@@ -230,7 +230,7 @@
 		<li class="plugin on">
                   <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="https://i.imgur.com/ylj9Yfq.png" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/quiet.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
                   <a href="https://betterdocs.net/themes/quiet.html" class="plugin-name">Loud</a>
-                  <p class="plugin-desc">Light and Loud. Easy on the eyes.</p>
+                  <p class="plugin-desc">Light and Loud. Harsh on the eyes.</p>
                   <div class="plugin-tag-list"> <a href="#Omniscient" class="plugin-tag">Omniscient</a> <a href="#Flat" class="plugin-tag">Flat</a> <a href="#Light" class="plugin-tag tag-invis">Light</a> <a href="#Modern" class="plugin-tag tag-invis">Modern</a> <a href="#Material" class="plugin-tag tag-invis">Material</a> <a href="#Animations" class="plugin-tag tag-invis">Animations</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
                 </li>
                 <li class="plugin on">
