--- a/themes/loud.html
+++ b/themes/loud.html
@@ -16,7 +16,7 @@
 <meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="BetterDocs" />
 <meta property="og:title" content="Loud" />
-<meta property="og:description" content="Light and LOud. Harsh on the eyes." />
+<meta property="og:description" content="Light and Loud. Harsh on the eyes." />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 
 <!-- Icon -->
